# StratEngine

./: .gitignore  .gitmodules  CMakeLists.txt
Sandbox/: Sandbox.cpp
Sandbox/EditorLayer/: EditorLayer.cpp  EditorLayer.h
StratEngine/: StratEngine.h  StratEngineCore.h
StratEngine/Render/: Renderer.h
StratEngine/Shaders/: SandBoxShader.glsl
StratEngine/src/: Application.cpp  Application.h  Core.cpp  StratConfig.h  pchstrat.h
StratEngine/src/Architecture/OpenGL/: OpenGL_Buffer.cpp  OpenGL_Buffer.h  OpenGL_Renderer.cpp  OpenGL_Renderer.h  OpenGL_VArray.cpp  OpenGL_VArray.h
StratEngine/src/Core/: Application.cpp  Application.h  Entrypoint.h  Input.cpp  Input.h  Layer.cpp  Layer.h  Logger.cpp  Logger.h
StratEngine/src/Event/: Event.h  EventDispatcher.h  KeyCodes.h  KeyboardEvent.h  MouseEvent.h
StratEngine/src/ImGui/: UI_imgui.cpp  UI_imgui.h
StratEngine/src/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Entity.cpp  Entity.h  GraphicsContext.cpp  GraphicsContext.h  Model.cpp  Model.h  OpenGLBuffer.cpp  OpenGLBuffer.h  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.h
StratEngine/src/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h
StratEngine/src/WinWindow/: GlfwWindow.cpp  GlfwWindow.h
StratEngine/src/Window/: Window.h
StratEngine/src/Window/WindowsWindow/: WindowsWindow.cpp  WindowsWindow.h
UserApplication/: UserApplication.cpp
